--- a/ledfx_docker/Dockerfile
+++ b/ledfx_docker/Dockerfile
@@ -21,10 +21,9 @@ ARG TARGETARCH
 RUN --mount=type=cache,id=apt-cache-${TARGETARCH},target=/var/cache/apt,sharing=locked \
     --mount=type=cache,id=apt-lib-${TARGETARCH},target=/var/lib/apt,sharing=locked \
     apt-get update && apt-get install -y libportaudio2 pulseaudio --no-install-recommends && rm -rf /var/lib/apt/lists/*
-ENV HOME="/root"
 ENV PATH="/app/.venv/bin:$PATH"
 ENV PYTHONUNBUFFERED=1
-ENV PULSE_SERVER="unix:$HOME/.config/pulse/pulseaudio.socket"
+ENV PULSE_SERVER=unix:${XDG_RUNTIME_DIR}/pulse/native
 ENV PULSE_COOKIE="$HOME/.config/pulse/cookie"
 RUN usermod -aG audio,pulse,pulse-access root \
   && chown -R root:root "/root"
@@ -34,7 +33,7 @@ COPY --chmod=755 ./ledfx_docker/start.sh $HOME/start.sh
 COPY --from=build /app/.venv /app/.venv
 ENV IS_RELEASE=True
 EXPOSE 8888/tcp
-ENTRYPOINT ["/root/start.sh"]
+ENTRYPOINT ["/bin/bash"]
 LABEL org.opencontainers.image.source="https://github.com/LedFx/LedFx"
 LABEL org.opencontainers.image.description="LedFx makes your LEDs dance to audio"
 #build with "docker build -f ledfx_docker/Dockerfile -t ledfx ."
