--- a/ledfx_docker/Dockerfile
+++ b/ledfx_docker/Dockerfile
@@ -21,19 +21,26 @@ ARG TARGETARCH
 RUN --mount=type=cache,id=apt-cache-${TARGETARCH},target=/var/cache/apt,sharing=locked \
     --mount=type=cache,id=apt-lib-${TARGETARCH},target=/var/lib/apt,sharing=locked \
     apt-get update && apt-get install -y libportaudio2 pulseaudio --no-install-recommends && rm -rf /var/lib/apt/lists/*
+ENV HOME="/home/ledfx"
 ENV PATH="/app/.venv/bin:$PATH"
 ENV PYTHONUNBUFFERED=1
-ENV PULSE_SERVER=unix:${XDG_RUNTIME_DIR}/pulse/native
-ENV PULSE_COOKIE="/root/.config/pulse/cookie"
-RUN usermod -aG audio,pulse,pulse-access root \
-  && chown -R root:root "/root"
+ENV PULSE_SERVER="tcp:host.containers.internal:4713"
+RUN groupadd --gid 1000 ledfx \
+  && useradd --uid 1000 --gid 1000 --create-home --home-dir "$HOME" ledfx \
+  && usermod -aG audio,pulse,pulse-access ledfx \
+  && chown -R ledfx:ledfx "$HOME"
 WORKDIR "$HOME"
 COPY ./ledfx_docker/pulse /etc/pulse
-COPY --chmod=755 ./ledfx_docker/start.sh $HOME/start.sh
-COPY --from=build /app/.venv /app/.venv
-ENV IS_RELEASE=True
+COPY --chmod=755 --chown=1000:1000 ./ledfx_docker/start.sh $HOME/start.sh
+COPY --from=build --chown=1000:1000 /app/.venv /app/.venv
+ARG GITHUB_SHA
+ARG IS_RELEASE
+ENV GITHUB_SHA=$GITHUB_SHA
+ENV IS_RELEASE=$IS_RELEASE
+USER ledfx
+HEALTHCHECK --interval=60s --timeout=3s --start-period=3s --retries=3 \
+  CMD pactl info > /dev/null 2>&1 || exit 1
 EXPOSE 8888/tcp
-ENTRYPOINT ["/root/start.sh"]
+ENTRYPOINT ["/home/ledfx/start.sh"]
 LABEL org.opencontainers.image.source="https://github.com/LedFx/LedFx"
 LABEL org.opencontainers.image.description="LedFx makes your LEDs dance to audio"
-#build with "docker build -f ledfx_docker/Dockerfile -t ledfx ."
